--- a/src/components/layout/AppHeader.css
+++ b/src/components/layout/AppHeader.css
@@ -80,7 +80,7 @@
 
 @media (max-width: 1100px) {
     .header-container {
-        font-size: 18px;
+        font-size: 17px;
     }
 
     .header-logo {
